--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "postcss-cli": "^11.0.1",
     "rehype-highlight": "^7.0.2",
     "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
     "simple-line-icons": "^2.3.2",
     "vue": "^3.5.18"
   },
